--- a/Modulo 4/Ejercicios 4.1 hasta 4.7/package.json
+++ b/Modulo 4/Ejercicios 4.1 hasta 4.7/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npm-run-all -p dev start-server",
+    "start": "npm-run-all -p dev start-server test",
     "start-server": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "test": "jest --verbose"
   },
   "author": "",
   "license": "ISC",
@@ -21,6 +22,7 @@
     "npm-run-all": "^4.1.5"
   },
   "devDependencies": {
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "jest": "^29.7.0"
   }
 }
